#107 Corrected wrapping behaviour for matched key parts in the overlay.

--- a/platform-web-ui/src/main/web/ua/com/fielden/platform/web/components/tg-autocompleter/tg-entity-editor.css
+++ b/platform-web-ui/src/main/web/ua/com/fielden/platform/web/components/tg-autocompleter/tg-entity-editor.css
@@ -51,8 +51,7 @@
     
     .key-value {
         font-size: small;
-        min-width: 150px;
-        white-space: normal;
+        min-width: 100px;
     }
     /* this is how only not selected values get their matched parts highlighted*/
     
@@ -62,7 +61,7 @@
     
     .desc-value {
         font-size: x-small;
-        min-width: 250px;
+        min-width: 150px;
         white-space: normal;
         padding-left: 20px;
     }
